[project]
name = "evolve-web"
version = "0.1.0a2"

description = "A Python-first UI framework that runs in the browser using Pyodide."
readme = "README.md"
authors = [
    { name = "Parag Ghatage", email = "parag.dev2025@gmail.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = []

[project.scripts]
evolve = "evolve.cli.cli:main"

[tool.setuptools.package-data]
"evolve" = [
    "js/*.js",
    "assets/pyodide/*",
    "assets/pyodide/python/*",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["evolve*"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
