[project]
name = "evolve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Parag Ghatage", email = "parag.dev2025@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "ruff>=0.14.6",
]

[project.scripts]
evolve = "evolve:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
